--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "strict": true,
     "sourceMap": true,
     "target": "esnext",
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "typeRoots" : ["node_modules/@types", "src/types"]
   },
   "exclude": ["node_modules"]
 }
