--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "css-loader": "^6.8.1",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "file-loader": "^6.2.0",
     "http": "^0.0.1-security",
     "mini-css-extract-plugin": "^2.7.6",
     "module_name": "^1.0.0",
