--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "http": "^0.0.1-security",
     "mini-css-extract-plugin": "^2.7.6",
     "module_name": "^1.0.0",
+    "node-fetch": "^3.3.1",
     "pg": "^8.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
