add server-types and roomController

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "esModuleInterop": true,
     "jsx": "react-jsx",
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "lib": ["dom", "esnext"],
     "strict": true,
@@ -10,5 +10,9 @@
     "target": "esnext",
     "noImplicitAny": true
   },
+  "include": [
+    "src/**/*",
+    "server/**/*"
+  ],
   "exclude": ["node_modules"]
 }
