--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --hot",
+    "start": "webpack-dev-server --mode development --open --hot & nodemon --exec ts-node server/server.ts",
     "build": "NODE_ENV=production webpack"
   },
   "keywords": [],
@@ -12,8 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "@react-oauth/google": "^0.11.0",
-    "@types/pg": "^8.10.2",
-    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "cors": "^2.8.5",
@@ -28,16 +26,22 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "socket.io": "^4.6.2",
-    "ts-loader": "^9.4.3"
+    "ts-loader": "^9.4.3",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.22.1",
     "@babel/preset-env": "^7.22.4",
     "@babel/preset-react": "^7.22.3",
+    "@babel/preset-typescript": "^7.21.5",
+    "@types/express": "^4.17.17",
+    "@types/pg": "^8.10.2",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
+    "@types/react-router-dom": "^5.3.3",
     "babel-loader": "^9.1.2",
     "html-webpack-plugin": "^5.5.1",
+    "nodemon": "^2.0.22",
     "typescript": "^5.1.3",
     "webpack": "^5.85.1",
     "webpack-cli": "^5.1.3",
