--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
     "babel-loader": "^9.1.2",
+    "dotenv-webpack": "^8.0.1",
     "html-webpack-plugin": "^5.5.1",
     "nodemon": "^2.0.22",
     "typescript": "^5.1.3",
