--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "socket.io": "^4.6.2",
+    "socket.io-client": "^4.6.2",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
